--- a/seoro/pom.xml
+++ b/seoro/pom.xml
@@ -49,6 +49,16 @@
 		    <version>1.18.28</version>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<!--  google nlp -->
+		
+		<dependency>
+          <groupId>com.google.cloud</groupId>
+          <artifactId>google-cloud-language</artifactId>
+          <version>2.18.0</version>
+        </dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
